--- a/home/templates/pages/index.html
+++ b/home/templates/pages/index.html
@@ -102,7 +102,7 @@
               <div class="inner">
                 <h3>{% trans 'Project variables' %}</h3>
                 <p>Param name:{{ app_param_name }} </p>
-                <p>{% trans '...and other project variables' %}</p>
+                <p>{% trans '...and other project variables can be seen if you log in as developer' %}</p>
               </div>
               <div class="icon">
                 <i class="fab fa-pagelines"></i>
