--- a/home/templates/includes/navigation-light.html
+++ b/home/templates/includes/navigation-light.html
@@ -8,7 +8,7 @@
         <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
       </li>
       <li class="nav-item d-none d-sm-inline-block">
-        <a href="{% url 'dashboardv3' %}" class="nav-link">{% trans 'Home' %}</a>
+        <a href="/" class="nav-link">{% trans 'Home' %}</a>
       </li>
       {% if request.user.is_authenticated %}
         {% if request.user.is_superuser %}
