--- a/home/templates/pages/utility.html
+++ b/home/templates/pages/utility.html
@@ -71,7 +71,7 @@
               <a  {% autoescape off %}  href="#" 
               onclick="
               $('#appModalTitle').text('{{ item.name }}'); 
-              $('#appModalContent').text('{{ item.name }}'); 
+              $('#appModalContent').load('http://172.16.0.229:52773/apptoolsrest/a/zapm'); 
               "
                {% endautoescape %}  data-toggle="modal" data-target="#modal-info" class="appmsw-more-info small-box-footer" >{% trans 'More info' %} <i class="fas fa-arrow-circle-right"></i></a>
             </div>
